# second-brain

.github/workflows/: build.yml
backend/: brain.py  main.py  requirements.txt
backend/knowledge_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
