[package]
name = "frontend"
version = "0.1.0"
description = "Second Brain Native"
authors = ["you"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"

# --- THAY THẾ FASTEMBED BẰNG CANDLE (PURE RUST) ---
# Bộ này đảm bảo không lỗi build trên Windows
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
tokenizers = "0.19.1"
hf-hub = "0.3.2"
# --------------------------------------------------