[package]
name = "frontend"
version = "0.1.0"
description = "Second Brain Native"
authors = ["you"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] } # Update DB mới nhất
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"

# --- FIX LỖI BUILD: DÙNG BẢN MỚI NHẤT (0.8.2) ---
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.21.0" # Tương thích với Candle 0.8
hf-hub = "0.4.1"      # Update Hub mới nhất
# ------------------------------------------------